# artha-monolith

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  fly.toml  platform-spec.md  pyproject.toml
.github/workflows/: deploy.yml
backend/: main.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  styles.css
tests/: test_api.py
